syntax = "proto2";

package NCloud.NBlockStore.NProto;

option go_package = "github.com/ydb-platform/nbs/cloud/blockstore/config";

////////////////////////////////////////////////////////////////////////////////
// Config for Notify service.

message TNotifyConfig
{
    // Service endpoint.
    optional string Endpoint = 2;

    // TLS details.
    optional string CaCertFilename = 3;
}
